<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_products_black_24dp"
        android:title="@string/title_product" />

    <item
        android:id="@+id/navigation_supplier"
        android:icon="@drawable/ic_local_shipping_black_24dp"
        android:title="@string/title_supplier" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_payments_black_24dp"
        android:title="@string/title_transaction" />

</menu>